fix overflow-y on index page

--- a/templates/1/default.css
+++ b/templates/1/default.css
@@ -1288,7 +1288,8 @@ fieldset {
   -moz-border-radius: 5px;
   border-radius: 5px;
   margin-bottom: 20px;
-  overflow: auto
+  overflow-y: hidden;
+  overflow-x: auto;
 }
 .portlet:last-child {
   margin-bottom: 0
